fix #main overflow issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -96,7 +96,7 @@
 	font-size: 2.5rem;
 	align-self: end;
 	//opacity: 0;
-	z-index: 998;
+	//z-index: 998;
 	@media (min-width:$xs){
 		font-size: 3rem;
 	}
